--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@400&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <script>
+    (function () {
+      var params = new URLSearchParams(location.search);
+      var p = params.get('p');
+      if (p) {
+        history.replaceState(null, '', p);
+      }
+    })();
+  </script>
 </head>
 <body>
   <app-root></app-root>
